force-app/main/default/objects/Expense__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <label>Payee</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Bills</relationshipLabel>
    <relationshipName>Expenses1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>