force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month_Year__c</columns>
    <columns>Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Paid__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>