force-app/main/default/objects/Expense__c/listViews/PC_MC_Exp_2018.listView-meta.xml
<ListView>
    <fullName>PC_MC_Exp_2018</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Month_Year__c</columns>
    <columns>Paid__c</columns>
    <columns>Amount__c</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Payee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2018</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>PC Master Card</value>
    </filters>
    <label>PC MC Expenses 2018</label>
</ListView>